---------------------------------------------------------------------------
Version 5.3.2  [DEVEL] (rgerhards), 2009-10-??
- simplified and thus speeded up the queue engine, also fixed some
  potential race conditions (in very unusual shutdown conditions)
  along the way. The threading model has seriously changes, so there may
  be some regressions.
- enhanced omfile to support transactional interface. This will increase
  performance in many cases.
- added multi-ruleset support to imudp
- re-enabled input thread termination handling that does avoid thread
  cancellation where possible. This provides a more reliable mode of
  rsyslogd termination (canceling threads my result in not properly
  freed resouces and potential later hangs, even though we perform
  proper cancel handling in our code). This is part of an effort to
  reduce thread cancellation as much as possible in rsyslog.
  NOTE: the code previously written code for this functionality had a
  subtle race condition. The new code solves that.
- enhanced immark to support non-cancel input module termination
- improved imudp so that epoll can be used in more environments,
  fixed potential compile time problem if EPOLL_CLOEXEC is not available.
- some cleanup/slight improvement:
  * changed imuxsock to no longer use deprecated submitAndParseMsg() IF
  * changed submitAndParseMsg() interface to be a wrapper around the new
    way of message creation/submission. This enables older plugins to be
    used together with the new interface. The removal also enables us to
    drop a lot of duplicate code, reducing complexity and increasing
    maintainability.
- bugfix: potential segfault on messages with empty MSG part. This was a
  recently introduced regression.
- bugfix: debug string larger than 1K were improperly displayed. Max size
  is now 32K, and if a string is even longer it is meaningful truncated.
---------------------------------------------------------------------------